fix z-index

--- a/app/assets/less.less
+++ b/app/assets/less.less
@@ -603,6 +603,7 @@ html, body {
 		left: 0;
 		background-color: #000;
 		opacity: .25;
+		z-index: 1;
 	}
 	.search {
 		position: fixed;
